Fixes distorted images - height set to auto

--- a/custom/themes/hwtc/sass/partials/_core.scss
+++ b/custom/themes/hwtc/sass/partials/_core.scss
@@ -7,8 +7,9 @@ body {
 
 img {
 
-    max-width: 100%;
     //width: 100%;
+    height: auto;
+    max-width: 100%;
 }
 
 .wrapper {
